# DeepRec

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  RELEASE.md  china_flag.txt  ci_build  client.py  demo.py  docker_env  make_app.py  ourmodel.py  readme-intel.md  readme.md  requirements_intel.txt  run.sh  run_xflow.py
blaze-benchmark/: CMakeLists.txt  build.sh
blaze-benchmark/benchmark/: CMakeLists.txt
docs/: README.md
jarvis/Dockerfile/: Yolov5.Dockerfile  cpu-ci.Dockerfile
models/: experimental.py
modelzoo/BST/: README.md  train.py
modelzoo/DIEN/: README.md  train.py
tensorflow/: opensource_only.files  workspace.bzl
tensorflow/core/kernels/tuning_ops/: BUILD  CMakeLists.txt  README.md  build.sh  create_infer.py  tunable_matmul.cc  tuning_matmul_op.cc
tensorflow/core/kernels/tuning_ops/host/: CMakeLists.txt  Makefile  README.md  release_pack.sh
tensorflow/core/kernels/tuning_ops/host/algorithm/Bayesian/: BayesianOptimizer.c  BayesianOptimizer.h
tensorflow/core/kernels/tuning_ops/host/algorithm/DE/: DEOptimizer.c  DEOptimizer.h
tensorflow/core/kernels/tuning_ops/host/algorithm/GA/: GAOptimizer.c  GAOptimizer.h
tensorflow/core/kernels/tuning_ops/host/algorithm/MOEAD/: MOEADOptimizer.c  MOEADOptimizer.h
tensorflow/core/kernels/tuning_ops/host/algorithm/PSO/: PSOOptimizer.c  PSOOptimizer.h
tensorflow/core/kernels/tuning_ops/host/algorithm/share/: Crossover.c  Crossover.h  Mutate.c  Mutate.h  Sampling.c  Sampling.h
tensorflow/core/kernels/tuning_ops/host/algorithm/share/GPR/: AcquisitionAlgo.c  AcquisitionAlgo.h  GPR.c  GPR.h  Kernels.c  Kernels.h  LinearAlgebraFuncs.c  LinearAlgebraFuncs.h
tensorflow/core/kernels/tuning_ops/host/driver/: module.c  module.h
tensorflow/core/kernels/tuning_ops/host/include/: Common.h  OptimizerIF.h  Suite.h
tensorflow/core/kernels/tuning_ops/host/include/DataTypes/: Individual.h  MapMapToFloat.h  MapStringToFloat.h  MapStringToInt.h  MapStringToPtr.h  MapStringToString.h  MapVectorToMap.h  Matrix.h  VectorFloat.h  VectorFloatToMap.h  VectorIndividual.h  VectorInt.h  VectorMap.h  VectorPair.h  VectorString.h  VectorVectorFloat.h  VectorVectorInt.h  VectorVectorString.h
tensorflow/core/kernels/tuning_ops/host/src/: Common.c  Optimizer.c  Optimizer.h  Suite.c
tensorflow/core/kernels/tuning_ops/host/src/DataTypes/: Individual.c  MapMapToFloat.c  MapStringToFloat.c  MapStringToInt.c  MapStringToPtr.c  MapStringToString.c  MapVectorToMap.c  Matrix.c  VectorFloat.c  VectorFloatToMap.c  VectorIndividual.c  VectorInt.c  VectorMap.c  VectorPair.c  VectorString.c  VectorVectorFloat.c  VectorVectorInt.c  VectorVectorString.c
tensorflow/core/kernels/tuning_ops/host/suite/: pta.c  utility.c
tensorflow/core/kernels/tuning_ops/host/suite/3DAT_latency/: Latency.c  Latency.h
tensorflow/core/kernels/tuning_ops/host/suite/Ackley/: Ackley.c  Ackley.h
tensorflow/core/kernels/tuning_ops/host/suite/ExpSinFunc/: ExpSinFunc.c  ExpSinFunc.h
tensorflow/core/kernels/tuning_ops/host/suite/NetworkAI/: NetworkAI.c  NetworkAI.h
tensorflow/core/kernels/tuning_ops/host_proxy/: CMakeLists.txt  host_proxy.cpp  host_proxy.h  host_proxy_manager.cpp  host_proxy_manager.h
tensorflow/core/kernels/tuning_ops/host_proxy_test/: CMakeLists.txt  host_proxy_test.cpp  host_proxy_test.h  sgemm_kernel.h  timer.h
tensorflow/core/kernels/tuning_ops/include/: sgemm_kernel.h  timer.h  tunable_matmul.h
tensorflow/core/kernels/tuning_ops/libxsmm/include/: libxsmm.f  libxsmm_version.h
tensorflow/core/kernels/tuning_ops/libxsmm/lib/: libxsmm.so.1  libxsmm.so.1.17.0
(+178 files in other folders)
